# AI

./: Cargo.toml  README.md  tokens.secret
requests/: bruno.json  prompt.bru
requests/wiki/: Train on wiki 2.bru  Train on wiki 3.bru  Train on wiki 4.bru  Train on wiki 5.bru  Train on wiki.bru
src/: lib.rs  main.rs
