[package]
name = "llm_host"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
rust-bert = "0.21.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.16.0"
